<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/MainPadding"
    android:background="@drawable/app_background"
    tools:context="com.example.vromia.healthadvisor.Activities.HelpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/container_dropshadow"
            android:padding="@dimen/ESubstanceCardPadding"
            android:layout_margin="@dimen/ESubstanceCardMargin"
            android:orientation="vertical">

            <TextView
                android:text="@string/text_question_what_it_is"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="@dimen/text_help_question" />

            <TextView
                android:text="@string/text_question_what"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_help_answer" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/container_dropshadow"
            android:padding="@dimen/ESubstanceCardPadding"
            android:layout_margin="@dimen/ESubstanceCardMargin"
            android:orientation="vertical">

            <TextView
                android:text="@string/text_question_how_it_works"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="@dimen/text_help_question" />

            <TextView
                android:text="@string/text_answer_how_it_works"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_help_answer" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/container_dropshadow"
            android:padding="@dimen/ESubstanceCardPadding"
            android:layout_margin="@dimen/ESubstanceCardMargin"
            android:orientation="vertical">

            <TextView
                android:text="@string/text_question_disease"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="@dimen/text_help_question" />

            <TextView
                android:text="@string/text_answer_disease"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_help_answer" />
        </LinearLayout>

        <TextView
            android:text="@string/text_question_recommendation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:gravity="center"
            android:layout_margin="@dimen/ESubstanceCardMargin"
            android:textSize="20sp" />

    </LinearLayout>

</ScrollView>
