<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="?attr/actionBarSize"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.ngngteam.healthadvisor.Fragments.Help"
    tools:showIn="@layout/fragment_help">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="24dp">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <TextView
                    style="@style/HelpQuestion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_question_what_it_is" />

                <TextView
                    style="@style/HelpAnswer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_question_what" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <TextView
                    style="@style/HelpQuestion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_question_how_it_works" />

                <TextView
                    style="@style/HelpAnswer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_answer_how_it_works" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <TextView
                    style="@style/HelpQuestion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_question_disease" />

                <TextView
                    style="@style/HelpAnswer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_answer_disease" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text_question_recommendation"
            android:textColor="@color/accent"
            android:textSize="20sp"
            android:textStyle="italic" />

    </LinearLayout>


</android.support.v4.widget.NestedScrollView>
